--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
       <li>Supongo</li>
     </ol>
     <h4>Experencia</h4>
-    <p></p>
+    <p>He de tener alguna?</p>
     <h4>Información</h4>
+    <p>Pues vivo en algun lugar </p>
     <h4>Contacto</h4>
+    <p>No tengo telefono</p>
   </body>
 </html>
